# logger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
CMake/: logmanConfig.cmake
example/: demo_funcs.c  demo_funcs.h  demo_main.c
examples/: CMakeLists.txt  demo_funcs.c  demo_funcs.h  demo_main.c
include/logger/: logger.h
include/logman/: logman.h
logger/: CMakeLists.txt  logger.c  logger.h
logger.xcodeproj/: project.pbxproj
logger.xcodeproj/xcshareddata/xcschemes/: logger.xcscheme  test_lib.xcscheme
logger.xcodeproj/xcuserdata/nikolajkomarov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
logger.xcodeproj/xcuserdata/nikolajkomarov.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  logger.c  logman.c  logman_int.h
tests/: CMakeLists.txt  logger_mtest.cpp  logger_utest.cpp  logman_mtest.cpp  logman_utest.cpp
